--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "DSC09053.JPG"
   name             : "Eleanor Tsai"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Ph.D. Candidate, Health Policy"
   location         : "Berkeley, CA"
   employer         : "UC Berkeley"
   uri              : # URL
